<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="in.codepeaker.bakingapp.fragments.VideoFragment">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/player_view"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_200" />

    <ImageView
        android:id="@+id/thumbnail_image"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size_200"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_baking"
        android:visibility="gone" />

    <TextView
        android:id="@+id/steps_text_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/size_10"
        android:padding="@dimen/size_20"
        android:textColor="@android:color/background_dark"
        tools:text="Some text Some text Some text Some text Some text Some text " />

</LinearLayout>
