...
            android:textSize="@dimen/textsize_16"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/ingred_recyclerview" />


        <android.support.v7.widget.RecyclerView
            android:id="@+id/steps_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/size_10"
            app:layout_constraintTop_toBottomOf="@id/steps_heading" />


...
